Arreglo pagina principal
Se arregla pagina principal y se agregan temas del 4 al 7

--- a/src/styles/_custom.sass
+++ b/src/styles/_custom.sass
@@ -19,7 +19,10 @@
     position: absolute
     top: 8%
     right: 90%
-  
+.imagen-principal
+    position: absolute
+    top: 10%
+    right: 55%  
 
 
 @keyframes float1
@@ -34,5 +37,9 @@
 
 .tarjeta-gris
   color: #F6F6F6
+
+.banner-principal p, .banner-principal h1, .banner-principal h2, .banner-principal h3, .banner-principal h4, .banner-principal h5, .banner-principal h6 
+    color: $color-sistema-texto;
+
 
 
