--- a/src/styles/_variables.sass
+++ b/src/styles/_variables.sass
@@ -67,7 +67,7 @@ $color-headers: $color-sistema-texto
 $color-tipografia: $color-sistema-texto
 
 $color-etiqueta-fondo: $color-primario
-$color-etiqueta-texto: $white
+$color-etiqueta-texto: $color-sistema-texto
 
 //color Links ------------------------------------------
 $color-link: $color-sistema-texto
