--- a/src/styles/_custom.sass
+++ b/src/styles/_custom.sass
@@ -23,6 +23,8 @@
     position: absolute
     top: 25%
     right: 40%  
+.banner-princiapal
+  animation: float1 2.8s ease-in-out infinite alternate
 
 
 @keyframes float1
@@ -40,6 +42,7 @@
 
 .banner-principal p, .banner-principal h1, .banner-principal h2, .banner-principal h3, .banner-principal h4, .banner-principal h5, .banner-principal h6 
     color: $color-sistema-texto;
+
 
 
 
