--- a/src/styles/_custom.sass
+++ b/src/styles/_custom.sass
@@ -14,17 +14,10 @@
     position: absolute
     top: 68%
     right: 45%
-  &-4
-    animation: float1 2.8s ease-in-out infinite alternate
-    position: absolute
-    top: 8%
-    right: 90%
 .imagen-principal
     position: absolute
-    top: 25%
-    right: 40%  
-.banner-princiapal
-  animation: float1 2.8s ease-in-out infinite alternate
+    top: 17%
+    right: 35%  
 
 
 @keyframes float1
@@ -43,6 +36,11 @@
 .banner-principal p, .banner-principal h1, .banner-principal h2, .banner-principal h3, .banner-principal h4, .banner-principal h5, .banner-principal h6 
     color: $color-sistema-texto;
 
+.fcp
+  background-color: #DBE7F3 !important
+
+.fca
+  background-color: #ECFAEF !important
 
 
 
