--- a/src/styles/_custom.sass
+++ b/src/styles/_custom.sass
@@ -45,5 +45,39 @@
 .fcb
   background-color: #BFE0FA !important
 
+.bloque-texto-h 
+    position: relative;
+
+.bloque-texto-h.color-secundario:before 
+    background-color: #E8F0F8;
+
+.bloque-texto-h:before 
+    content: '';
+    display: block;
+    position: absolute;
+    top: 40%;
+    bottom: 0;
+    left: 0%;
+    right: 30%;
+
+.bloque-texto-j 
+    position: relative;
+
+.bloque-texto-j.color-secundario:before 
+    background-color: #E8F0F8;
+
+.bloque-texto-j:before 
+    content: '';
+    display: block;
+    position: absolute;
+    top: 40%;
+    bottom: 0;
+    left: 0%;
+    right: 30%;
+
+
+
+
+
 
 
