--- a/src/styles/_custom.sass
+++ b/src/styles/_custom.sass
@@ -90,6 +90,12 @@
 .fce
   background-color: #ECFAEF !important
 
+.fcf
+  background-color: #DEE4F0 !important
+  
+.fcg
+  background-color: #C3E2FD !important
+
 .bloque-texto-h 
     position: relative;
 
