--- a/src/styles/_custom.sass
+++ b/src/styles/_custom.sass
@@ -223,3 +223,13 @@
   background-color: #EFEFEF !important
 .banner-principal__img
   width: 400px !important 
+.img-infografica-b__modal
+  background-color: #ecfaef
+  display: flex
+  align-items: center
+  border-radius: 20px
+  .h5, p, li
+    color: $color-sistema-texto !important
+.img-infografica-b__modal__btn-cerrar
+  i
+    color: $color-sistema-texto !important
