--- a/src/styles/_custom.sass
+++ b/src/styles/_custom.sass
@@ -233,3 +233,6 @@
 .img-infografica-b__modal__btn-cerrar
   i
     color: $color-sistema-texto !important
+
+.horizontal-scroll
+  align-items: stretch !important    
